fixes submenu spacing problem

--- a/src/components/cells/CommandCell/index.module.scss
+++ b/src/components/cells/CommandCell/index.module.scss
@@ -17,6 +17,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 1rem;
+  opacity: 1;
 
   @media (prefers-color-scheme: dark) {
     color: $white;
@@ -27,12 +29,6 @@
     color: $offwhite;
     padding: 0.6em 1.2em;
     cursor: default;
-  }
-
-  opacity: 1;
-
-  &:not(:last-child) {
-    margin-bottom: 1rem;
   }
 
   transition: opacity calc($transition-rate / 2) ease-in,
